--- a/frontend-app/src/app/components/login/login.component.css
+++ b/frontend-app/src/app/components/login/login.component.css
@@ -1,25 +1,31 @@
-h1 {
-  color: #333;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-form {
-  margin-top: 20px;
+.card {
+  width: 380px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background: radial-gradient(circle at center, #ffffff, #fcfbfb63);
 }
 
-label {
+.card-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.btn-block {
   display: block;
-  margin-bottom: 5px;
+  width: 100%;
 }
 
-input {
-  padding: 5px;
-  margin-bottom: 10px;
-}
-
-button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  cursor: pointer;
+.text-danger {
+  margin-top: 10px;
 }
