--- a/frontend-app/src/app/components/post-list/post-list.component.css
+++ b/frontend-app/src/app/components/post-list/post-list.component.css
@@ -1,3 +1,5 @@
+@import '~bootstrap-icons/font/bootstrap-icons.css';
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -16,8 +18,26 @@ tbody td {
 
 button {
   padding: 5px 10px;
-  background-color: #dc3545;
   color: #fff;
   border: none;
   cursor: pointer;
 }
+
+.search-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.search-input {
+  flex: 1;
+  padding: 5px;
+  font-size: 14px;
+}
+
+.search-button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  font-size: 14px;
+}
+
