--- a/frontend-app/src/app/components/notification-modal/notification-modal.component.html
+++ b/frontend-app/src/app/components/notification-modal/notification-modal.component.html
@@ -1,19 +1,4 @@
-<div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="notificationModalLabel">{{ title }}</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        {{ message }}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
-      </div>
-    </div>
-  </div>
+<div class="modal-body">
+  <h3 class="modal-title mb-3 text-primary">{{ title }}</h3>
+  <p>{{ message }}</p>
 </div>
