--- a/frontend-app/src/app/components/post-form/post-form.component.html
+++ b/frontend-app/src/app/components/post-form/post-form.component.html
@@ -1,14 +1,16 @@
-<div class="container">
-  <h2>{{ formTitle }}</h2>
-  <form (submit)="submitForm()">
-    <div class="form-group">
-      <label for="title">Título:</label>
-      <input type="text" class="form-control" id="title" [(ngModel)]="post.title" required>
-    </div>
-    <div class="form-group">
-      <label for="body">Contenido:</label>
-      <textarea class="form-control" id="body" rows="4" [(ngModel)]="post.body" required></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">{{ formSubmitButtonText }}</button>
-  </form>
+<div class="card shadow p-2">
+  <div class="container">
+    <h2>{{ formTitle }}</h2>
+    <form (submit)="submitForm()">
+      <div class="form-group">
+        <label for="title">Título:</label>
+        <input type="text" class="form-control" id="title" name="title" [(ngModel)]="post.title" required>
+      </div>
+      <div class="form-group">
+        <label for="body">Contenido:</label>
+        <textarea class="form-control" id="body" name="body" rows="4" [(ngModel)]="post.body" required></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">{{ formSubmitButtonText }}</button>
+    </form>
+  </div>
 </div>
